--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       作者：<a href="">程志博</a>
     </div>
   </div>
-  <script src="http://apps.bdimg.com/libs/jquery/1.9.1/jquery.js"></script>
+  <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
   <script type="text/javascript">
     var listLength = $('.header .buttons li').length
     for(var i = 0; i<listLength; i++){
