--- a/rotation.html
+++ b/rotation.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>轮播</title>
-	<script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+	<script type="text/javascript" src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
 	<style type="text/css">
 	*{
 		margin: 0;
