--- a/proj1.html
+++ b/proj1.html
@@ -240,36 +240,36 @@
         <ul class="social">
           <h3>ACTIVITIES</h3>
           <li>
-            <p class="title"><span class="social">项目主页</span><a href="https://github.com/CCCLARITY/introduction/blob/master/index.html" target="_blank">　去GitHub上查看源码</a></p>
-            <p>通过HTML、CSS（列表、浮动、清理浮动、居中等知识）、JS、jQuery基础知识制作个人项目展示页面，通过点击项目浏览制作效果。</p>
-            <img src="./projectsnav.png">
+            <p class="title"><span class="social">公积金管理信息系统</span></p>
+            <h4>项目描述</h4>
+            <p>该项目负责某市住房公积金管理信息系统的开发及上线，项目全程分为：需求阶段、开发阶段、测试阶段、联调阶段、上线阶段及维护阶段。</p>
+            <h4>运用技术</h4>
+            <p>html/css的编写与设计，JS和jQuery校验和操作网页数据，完成对DOM的操作，ajax异步通讯实现前端与后台的数据交互，通过SQL语言使用Razor SQL工具操作后台核心数据表，使用Linux命令查看日志并解决问题。</p>
+            <h4>项目职责</h4>
+            <p>在项目中负责编写需求文档，根据实际情况给客户提供较好的方案，根据需求文档中的页面要素设计业务的页面结构，通过ajax向后台获取所需数据，前端页面涉及js、jQuery等技术。系统主要技术语言为C语言，能够灵活运用嵌入式SQL获取数据库数据，并操作数据。使用CRT工具调试业务代码，简单使用Linux命令。独立负责电子档案系统的业务部分的代码编写，并负责和外围开发沟通，合作解决电子档案系统的问题。</p>
           </li>
-          <li>
-            <p class="title"><span class="social">在线版简历</span><a href="https://github.com/CCCLARITY/introduction/blob/master/proj1.html" target="_blank">　去GitHub上查看源码</a></p>
-            <p>通过CSS类选择器、绝对定位、布局等知识，制作简单的图标和效果，个人版在线简历，点击图片可查看源码</p>
-            <img src="./onlineintro.png">
-          </li>
-          <li>
-            <p class="title"><span class="social">企业静态页面</span><a href="https://github.com/CCCLARITY/introduction/blob/master/companyintro.html" target="_blank">　去GitHub上查看源码</a></p>
-            <p>CSS综合应用</p>
-            <img src="./companyintro.png">
-          </li>
-          <li>
-            <p class="title"><span class="social">轮播页面</span><a href="https://github.com/CCCLARITY/introduction/blob/master/rotation.html" target="_blank">　去GitHub上查看源码</a></p>
-            <p>使用CSS巧妙布局，和JS、jQuery、动画等知识相结合实现渐变式以及移动式轮播效果</p>
-            <img src="./rotation.png">
-          </li>
-          <li>
-            <p class="title"><span class="social">懒加载、ajax、瀑布流</span><a href="https://github.com/CCCLARITY/introduction/blob/master/lazyload.html" target="_blank">　去GitHub上查看源码</a></p>
-            <p>利用JS、jQuery、AJAX、Easy-Mock等技术，制作了包含懒加载、瀑布流等效果的页面</p>
-            <img src="./lazyload.png">
-          </li>
+
           <li>
             <p class="title"><span class="social">React</span><a href="https://github.com/CCCLARITY/todoList-practice1" target="_blank">　去GitHub上查看源码</a></p>
-            <p>React框架制作TODOList，回车添加，可删除，注册、登录、修改个人密码并且记录个人数据，使用leanCloud存储数据</p>
+            <p>此项目核心技术为React框架，使用webpack加载不同的资源，并打包；操作npm命令安装工具，并将代码实时更新至GitHub仓库；熟悉JSX语法，将HTML和JS整合在一起，实现组件化；运用leanCloud的核心功能leanStorage存储用户的信息和数据；项目实现了用户注册、登录、忘记密码、添加待办事项等功能，界面清新，操作便捷。</p>
             <img src="./signup.png">
             <img src="./signin.png">
             <img src="./mainpage.png">
+          </li>
+          
+          <li>
+            <p class="title"><span class="social">个人项目主页</span></p>
+            <p>通过HTML、CSS（绝对定位、相对定位、flex布局、浮动、清理浮动、居中等知识）、iconfont字体图标库、JS、jQuery基础知识、ajax、Easy-Mock等技术制作个人项目展示页面，其中包括在线版简历、企业静态页面、移动式/渐变式动画轮播、瀑布流与懒加载结合图片墙展示等。</p>
+            <p><span style="font-style: italic">项目导航</span><a href="https://github.com/CCCLARITY/introduction/blob/master/index.html" target="_blank">　去GitHub上查看源码</a></p>
+            <img src="./projectsnav.png">
+            <p><span style="font-style: italic">在线简历</span><a href="https://github.com/CCCLARITY/introduction/blob/master/proj1.html" target="_blank">　去GitHub上查看源码</a></p>
+            <img src="./onlineintro.png">
+            <p><span style="font-style: italic">企业静态页面</span><a href="https://github.com/CCCLARITY/introduction/blob/master/companyintro.html" target="_blank">　去GitHub上查看源码</a></p>
+            <img src="./companyintro.png">
+            <p><span style="font-style: italic">轮播</span><a href="https://github.com/CCCLARITY/introduction/blob/master/rotation.html" target="_blank">　去GitHub上查看源码</a></p>
+            <img src="./rotation.png">
+            <p><span style="font-style: italic">图片墙</span><a href="https://github.com/CCCLARITY/introduction/blob/master/lazyload.html" target="_blank">　去GitHub上查看源码</a></p>
+            <img src="./lazyload.png">
           </li>
         </ul>
       </div>
@@ -289,7 +289,7 @@
           <li>
             <p>掌握面向对象思想，能根据面向对象思想封装常用组件；</p></li>
           <li>
-            <p>了解React框架，理解相关概念，能实现简单的交互效果，实现注册、登录、忘记密码、使用leancloud保存用户数据等功能</p></li>
+            <p>了解React框架，理解相关概念，组件化编写代码，能够使用leanCloud存储数据</p></li>
         </ul>
       </div>
     </div>
