--- a/proj1.html
+++ b/proj1.html
@@ -210,15 +210,26 @@
         <p><span>工作地点</span> 北京</p>
         <p><span>联系方式</span> 17610176771</p>
         <p><span>邮箱</span> 1227039581@qq.com</p>
-        <p><span>期望薪资</span> 8k-10k</p>
+        <p><span>期望薪资</span> 6k-10k</p>
       </div>
     </div>
     <div class="main clearfix">
+      <div class="education">
+        <ul class="school">
+          <h3>教育经历</h3>
+          <li>
+            <p class="title"><span class="school">长春理工大学</span>2012/09-2016/06</p>
+            <p>本科/信息管理与信息系统<br />
+            主修课程：C语言、面向对象程序设计、数据结构、操作系统、数据库原理与应用、网页开发与设计、计算机网络等。</p>
+          </li>
+        </ul>
+      </div>
       <div class="experience">
         <ul class="work">
-          <h3>WORK EXPERINECE</h3>
+          <h3>工作经历</h3>
           <li>
-            <p class="title"><span class="company">华信永道（北京）科技股份有限公司</span>/2016/03-/2017/06</p>
+            <p class="title"><span class="company">华信永道（北京）科技股份有限公司</span>2016/03-2017/06</p>
+            <h4>职位：</h4><span>web工程师</span>
             <p>1、负责项目中公积金系统归集、贷款、提取、财务各个子系统部分功能的开发、测试、联调以及维护；<br />
               2、负责项目中电子档案部分核心系统的开发并与外围系统人员协作测试、解决问题；<br />
               3、负责和外围系统开发人员沟通，并能很好的理解工作伙伴的需求，紧跟项目周期，高质量的完成领导布置的任务；<br />
@@ -226,19 +237,9 @@
             </p></li>
         </ul>
       </div>
-      <div class="education">
-        <ul class="school">
-          <h3>EDUCATION</h3>
-          <li>
-            <p class="title"><span class="school">长春理工大学</span>/2012/09-/2016/06</p>
-            <p>/本科/信息管理与信息系统<br />
-            主修课程：C语言、面向对象程序设计、数据结构、操作系统、数据库原理与应用、网页开发与设计、计算机网络等。</p>
-          </li>
-        </ul>
-      </div>
       <div class="activities">
         <ul class="social">
-          <h3>ACTIVITIES</h3>
+          <h3>项目经历</h3>
           <li>
             <p class="title"><span class="social">公积金管理信息系统</span></p>
             <h4>项目描述</h4>
@@ -275,7 +276,7 @@
       </div>
       <div class="skills">
         <ul class="prof">
-          <h3>SKILLS</h3>
+          <h3>个人技能</h3>
           <li>
             <p>英语CET6；</p></li>
           <li>
