--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
       <h1>我的项目</h1>
       <p>**一直在行走的程序媛**</p>
       <ul class="buttons clearfix">
-        <li><a class="button active" href="#" target="_blank">项目1</a></li>
-        <li><a class="button" href="https://ccclarity.github.io/todoList-practice1/build/index.html" target="_blank">项目2</a></li>
-        <li><a class="button" href="./proj1.html" target="_blank">项目3</a></li>
-        <li><a class="button" href="./companyintro.html" target="_blank">项目4</a></li>
-        <li><a class="button" href="./rotation.html" target="_blank">项目5</a></li>
-        <li><a class="button" href="./lazyload.html" target="_blank">项目6</a></li>
+        <li><a class="button active" href="#" target="_blank">项目导航</a></li>
+        <li><a class="button" href="https://ccclarity.github.io/todoList-practice1/build/index.html" target="_blank">时间清单</a></li>
+        <li><a class="button" href="./proj1.html" target="_blank">在线简历</a></li>
+        <li><a class="button" href="https://ccclarity.github.io/make-one-pikachu/" target="_blank">皮卡丘</a></li>
+        <li><a class="button" href="./rotation.html" target="_blank">轮播组件</a></li>
+        <li><a class="button" href="https://ccclarity.github.io/mock-navigation/" target="_blank">模拟导航</a></li>
       </ul>
     </div>
     <div class="content">
