--- a/proj1.html
+++ b/proj1.html
@@ -210,7 +210,7 @@
         <p><span>工作地点</span> 北京</p>
         <p><span>联系方式</span> 17610176771</p>
         <p><span>邮箱</span> 1227039581@qq.com</p>
-        <p><span>期望薪资</span> 6k-10k</p>
+        <p><span>期望薪资</span> 8k+</p>
       </div>
     </div>
     <div class="main clearfix">
@@ -219,8 +219,7 @@
           <h3>教育经历</h3>
           <li>
             <p class="title"><span class="school">长春理工大学</span>2012/09-2016/06</p>
-            <p>本科/信息管理与信息系统<br />
-            主修课程：C语言、面向对象程序设计、数据结构、操作系统、数据库原理与应用、网页开发与设计、计算机网络等。</p>
+            <p>本科/信息管理与信息系统<br /></p>
           </li>
         </ul>
       </div>
@@ -228,13 +227,18 @@
         <ul class="work">
           <h3>工作经历</h3>
           <li>
-            <p class="title"><span class="company">华信永道（北京）科技股份有限公司</span>2016/03-2017/06</p>
+            <p class="title"><span class="company">华信永道（北京）科技股份有限公司</span>2016/03-2017/10</p>
             <h4>职位：</h4><span>web工程师</span>
             <p>1、负责项目中公积金系统归集、贷款、提取、财务各个子系统部分功能的开发、测试、联调以及维护；<br />
               2、负责项目中电子档案部分核心系统的开发并与外围系统人员协作测试、解决问题；<br />
               3、负责和外围系统开发人员沟通，并能很好的理解工作伙伴的需求，紧跟项目周期，高质量的完成领导布置的任务；<br />
               4、根据客户的需求，为客户提供解决的方案并实施
             </p></li>
+            <li>
+              <p class="title"><span class="company">华润医药商业集团</span>2017/10-2018/01</p>
+              <h4>职位：</h4><span>ERP实施顾问</span>
+              <p>加入公司信息部零售项目组，在客户现场跟踪项目进度向领导汇报，负责系统内流向平台的问题排查定位，帮用户督促供应商的进度。系统报表的开发。
+              </p></li>
         </ul>
       </div>
       <div class="activities">
@@ -252,7 +256,7 @@
 
           <li>
             <p class="title"><span class="social">React</span><a href="https://github.com/CCCLARITY/todoList-practice1" target="_blank">　去GitHub上查看源码</a></p>
-            <p>此项目核心技术为React框架，使用webpack加载不同的资源，并打包；操作npm命令安装工具，并将代码实时更新至GitHub仓库；熟悉JSX语法，将HTML和JS整合在一起，实现组件化；运用leanCloud的核心功能leanStorage存储用户的信息和数据；项目实现了用户注册、登录、忘记密码、添加待办事项等功能，界面清新，操作便捷。</p>
+            <p>此项目核心技术为React框架，使用webpack加载不同的资源，并打包；将代码组件化，方便日后的维护、测试和需求的更新；使用leancloud当作存储数据的服务器，将用户的信息存下来，并实现找回密码的功能；将代码实时更新至GitHub仓库。</p>
             <img src="./signup.png">
             <img src="./signin.png">
             <img src="./mainpage.png">
@@ -260,17 +264,17 @@
           
           <li>
             <p class="title"><span class="social">个人项目主页</span></p>
-            <p>通过HTML、CSS（绝对定位、相对定位、flex布局、浮动、清理浮动、居中等知识）、iconfont字体图标库、JS、jQuery基础知识、ajax、Easy-Mock等技术制作个人项目展示页面，其中包括在线版简历、企业静态页面、移动式/渐变式动画轮播、瀑布流与懒加载结合图片墙展示等。</p>
+            <p>通过HTML、CSS（绝对定位、相对定位、flex布局、浮动、清理浮动、居中等知识）、iconfont字体图标库、JS、jQuery基础知识、ajax、Easy-Mock等技术制作个人项目展示页面，其中包括在线版简历、使用CSS和JS展示一个皮卡丘的制作过程、移动式/渐变式动画轮播、利用JS和数据结构等知识实现模拟导航效果等。</p>
             <p><span style="font-style: italic">项目导航</span><a href="https://github.com/CCCLARITY/introduction/blob/master/index.html" target="_blank">　去GitHub上查看源码</a></p>
             <img src="./projectsnav.png">
             <p><span style="font-style: italic">在线简历</span><a href="https://github.com/CCCLARITY/introduction/blob/master/proj1.html" target="_blank">　去GitHub上查看源码</a></p>
             <img src="./onlineintro.png">
-            <p><span style="font-style: italic">企业静态页面</span><a href="https://github.com/CCCLARITY/introduction/blob/master/companyintro.html" target="_blank">　去GitHub上查看源码</a></p>
-            <img src="./companyintro.png">
+            <p><span style="font-style: italic">动态制作皮卡丘</span><a href="https://github.com/CCCLARITY/make-one-pikachu" target="_blank">　去GitHub上查看源码</a></p>
+            <img src="./pikachu.png">
             <p><span style="font-style: italic">轮播</span><a href="https://github.com/CCCLARITY/introduction/blob/master/rotation.html" target="_blank">　去GitHub上查看源码</a></p>
             <img src="./rotation.png">
-            <p><span style="font-style: italic">图片墙</span><a href="https://github.com/CCCLARITY/introduction/blob/master/lazyload.html" target="_blank">　去GitHub上查看源码</a></p>
-            <img src="./lazyload.png">
+            <p><span style="font-style: italic">模拟导航页面</span><a href="https://github.com/CCCLARITY/mock-navigation" target="_blank">　去GitHub上查看源码</a></p>
+            <img src="./mock-navigation.png">
           </li>
         </ul>
       </div>
@@ -278,19 +282,21 @@
         <ul class="prof">
           <h3>个人技能</h3>
           <li>
-            <p>英语CET6；</p></li>
+            <p>英语CET6，有较好的听说读写能力；</p></li>
+          <li>
+              <p>熟悉HTML、CSS、JavaScript、jQuery基础知识，能做出尊重设计稿的静态页面，有相关开发经验；</p></li>
+          <li>
+            <p>了解React框架，理解相关概念，组件化编写代码，能够使用leanCloud存储数据；</p></li>
+          <li>
+            <p>了解移动端页面的开发，响应式布局；</p></li>
           <li>
             <p>熟练掌握C语言，有相关开发经验；熟练使用SQL，对数据的增删改查、速度优化及相关操作能够熟练的应用；熟练应用ESQL，把SQL语言嵌入到过程化的编程语言中，同时提高两种语言的灵活性；</p></li>
           <li>
-            <p>精通HTML、CSS、JavaScript、jQuery基础知识，能做出尊重设计稿的静态页面，有相关开发经验；</p></li>
-          <li>
             <p>了解AJAX相关原理及应用，了解JSONP、CORS等跨域解决方案，能与后端程序员配合实现动态页面；</p></li>
           <li>
-            <p>了解npm&Git，有相关使用经验，能使用Git工具对代码进行版本管理；</p></li>
+            <p>了解SVN&Git，有相关使用经验，能使用Git工具对代码进行版本管理；</p></li>
           <li>
             <p>掌握面向对象思想，能根据面向对象思想封装常用组件；</p></li>
-          <li>
-            <p>了解React框架，理解相关概念，组件化编写代码，能够使用leanCloud存储数据</p></li>
         </ul>
       </div>
     </div>
